Moved accounts information into the accounts page

--- a/client/partials/accounts.html
+++ b/client/partials/accounts.html
@@ -1,3 +1,9 @@
 <div>
-  Accounts Page
+  <h2>Accounts Page</h2>
+  <div ng-repeat="account in accounts | orderBy:'+accountId'">
+    <b>{{account.firstName}} {{account.lastName}}</b>
+    <div ng-repeat="transaction in account.transactions | orderBy:'+location'">
+      {{transaction.amount | currency}} @ {{transaction.location}}
+    </div>
+  </div>
 </div>
